--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
 	</form>
 
  </div>
+<div class="loader" ng-show="loading"></div>
  <div class="reasons" ng-if="feeds.length>0"><div class="byline"><p>Feeds from social networks</p></div></div>
  <div class="reasons" ng-if="flag && feeds.length===0">Sorry, no results found!</div>
 <div class="reasons" ng-if="feeds.length>0">
